Intermediate commit (get rid of CompletableFuture 2)